--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,3 +15,6 @@ jobs:
       - name: Now it is
         run: |
           echo $(date)
+      - name: Directory content
+        run: |
+          echo $(ls)
