Added trigger for deployment, changed version to 2

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,4 +26,6 @@ jobs:
         with:
           command: npm run test:e2e:ci
           start: npm run start-prod
-          wait-on: http://localhost:5000 
+          wait-on: http://localhost:5000
+      - name: Trigger deployment
+        run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_DEPLOY_HOOK }}?key=${{ secrets.RENDER_API_KEY }}
