--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,8 +38,12 @@ jobs:
           wait-on: http://localhost:5000
           
       - name: Notification of success
+        uses: rjstone/discord-webhook-notify@v2
         if: ${{ success() }}
-        run: echo "All good, send message"
+        with:
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+            severity: info
+            details: All tests passed!
 
       - name: Notification of failure
         if: ${{ failure() }}
