--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,12 +38,12 @@ jobs:
           wait-on: http://localhost:5000
           
       - name: Notification of success
-        uses: rjstone/discord-webhook-notify@v2
         if: ${{ success() }}
-        with:
-            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-            severity: info
-            details: All tests passed!
+        run: |
+          curl -H "Content-Type: application/json" \
+              -X POST \
+              -d '{"content": "This is notification of success"}' \
+              ${{ secrets.DISCORD_WEBHOOK }}
 
       - name: Notification of failure
         if: ${{ failure() }}
