broke test intentionally to see if i get failure message on discord

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -68,8 +68,50 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAG_PREFIX: v
 
-  discord_notification:
+  discord_notification_success:
     needs: [tag_release]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notification of success
+        if: ${{ success() }}
+        uses: Ilshidur/action-discord@master
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        with:
+          args: 'Version ${{ github.ref_name }} merged from PR'
+
+      - name: Notification of failure
+        if: ${{ failure() }}
+        uses: Ilshidur/action-discord@master
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        with:
+          args: 'Failure on deployment, commit ${{ github.sha }}'
+
+  discord_notification_failure_pr_cheks:
+    needs: [pr_checks]
+    if: ${{ failure() }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notification of success
+        if: ${{ success() }}
+        uses: Ilshidur/action-discord@master
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        with:
+          args: 'Version ${{ github.ref_name }} merged from PR'
+
+      - name: Notification of failure
+        if: ${{ failure() }}
+        uses: Ilshidur/action-discord@master
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        with:
+          args: 'Failure on deployment, commit ${{ github.sha }}'
+
+  discord_notification_failure_deploy:
+    needs: [deploy_on_merge]
+    if: ${{ failure() }}
     runs-on: ubuntu-latest
     steps:
       - name: Notification of success
