--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -78,13 +78,7 @@ jobs:
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
           with:
-            args: ${{ toJSON([
-              {
-                "title": "Notification of success",
-                "description": "No errors detected",
-                "color": 65280
-              }
-            ]) }}
+            args: 'Notification of success'
 
       - name: Notification of failure
         if: ${{ failure() }}
