And minor syntax fixing

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -79,13 +79,15 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         with:
           args: > 
-            ${{ toJSON([
-              {
-                "title": "Notification of success",
-                "description": "No errors detected",
-                "color": 65280
-              }
-            ]) }}
+            {
+              "embeds": [
+                {
+                  "title": "Notification of success",
+                  "description": "No errors detected",
+                  "color": 65280
+                }
+              ]
+            }
 
       - name: Notification of failure
         if: ${{ failure() }}
