--- a/.github/workflows/heatlh-check.yml
+++ b/.github/workflows/heatlh-check.yml
@@ -11,6 +11,6 @@ jobs:
         uses: jtalk/url-health-check-action@v4
         with:
           url: https://full-stack-open-pokedex-p4t4.onrender.com/health
-          max-attemps: 3
+          max-attempts: 3
           retry-delay: 5
           
